--- a/apps/navbar/src/index.html
+++ b/apps/navbar/src/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Menu</title>
+  <title>Navbar</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <menu-root></menu-root>
+  <navbar-root></navbar-root>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/zone.js/0.8.19/zone.js"></script>
 </body>
 </html>
